# keri-python-ffi

./: .gitignore  Cargo.toml  README.md  adr_db  last_crudential
ffi/: Cargo.toml  build.rs
ffi/python/: basic_example.py  client_example.py  controller_example.py  entity_example.py  eve.py  eve_bob_example.py  example.py  holder.py  pack.py  pack_management.py  server_example.py  vc_example.py
ffi/python/crudential_example/: holder.py  issuer.py  verifier.py
ffi/src/: glue.rs.in
keri_ecosystem/: Cargo.toml
keri_ecosystem/src/: error.rs  lib.rs  wallet_wrapper.rs
keri_ecosystem/src/communication/: address_provider.rs  mod.rs  tcp_communication.rs  thing_communication.rs
keri_ecosystem/src/controller/: entity.rs  mod.rs
keri_ecosystem/src/datum/: mod.rs
keri_ecosystem/src/kerl/: event_generator.rs  mod.rs
keri_ecosystem/src/tel/: mod.rs  tel_event.rs  tel_manager.rs
keri_ecosystem/src/thing/: mod.rs
keriox_wrapper/: Cargo.toml
keriox_wrapper/src/: address_provider.rs  controller.rs  datum.rs  did_document.rs  entity.rs  error.rs  event_generator.rs  kerl.rs  lib.rs  main.rs  talking_kerl.rs  tcp_communication.rs  wallet_wrapper.rs
keriox_wrapper/src/tel/: mod.rs  tel_event.rs  tel_manager.rs
scripts/: build_python.sh
