[package]
name = "ffi"
version = "0.1.0"
authors = ["Edyta Pawlak <edyta.pawlakk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keri_ecosystem"
crate-type = ["cdylib", "staticlib"]

[dependencies]
keri_ecosystem = { path = "../keri_ecosystem" }
cpython = { version = "0.3", features = ["extension-module"] }

[build-dependencies]
flapigen = "0.6.0-pre7"
