[package]
name = "keri_ecosystem"
version = "0.1.0"
authors = ["Edyta Pawlak <edyta.pawlakk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keri = { git = "https://github.com/decentralized-identity/keriox", rev = "fed49f32883fb50889693567f6cf0da8f0803a64"}
ursa = { git = "https://github.com/hyperledger/ursa", rev = "d4af8efd", default-features = false, features = ["portable"]}
acdc = { git = "ssh://gerrit.opensoftware.pl/HCF/acdc-rust" }
serde = "1.0"
serde_json = "1.0"
base64 = "0.13.0"
thiserror = "1.0"
tempfile = "3"
clap = "2.33.3"
rand = "0.7.3"
ed25519-dalek = "1.0.1"
blake3 = "0.3.7"
